# storage/api-docs/api-docs.json
@@ -12,7 +12,7 @@
                 ],
                 "summary": "Register a new user",
                 "description": "Register new user",
-                "operationId": "register",
+                "operationId": "authRegister",
                 "requestBody": {
                     "content": {
                         "application/json": {
@@ -951,7 +951,10 @@
     },
     "security": [
         {
-            "api_key_security_example": []
+            "bearer_token": [
+                "read",
+                "write"
+            ]
         }
     ]
 }
